<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=""
    android:orientation="vertical"
    tools:context=".InicioApp.RegistroUsuario">

    <!--Titulo "Registro" -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="#135920"
        android:backgroundTint="#321C5B"
        android:fontFamily="serif"
        android:foregroundTint="@color/white"
        android:lineSpacingExtra="10sp"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFCFC" />

    <!-- indicaciones-->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/por_favor_rellene_los_siguientes_campos_para_registrarse"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="16sp" />

    <!-- nombre-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/txtNombreRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombre_registro"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColorHint="#546E7A" />

    <!-- apellidos -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:text="@string/apellidos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/txtApellidosRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/apellidos_registro"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColorHint="#546E7A" />

    <!--email -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/correo_electronico_registro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/txtCorreoRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/micorreo_institucional_com"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#546E7A" />

    <!-- contraseña-->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/contrasena_registro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/txtContrasenaRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/minimo_8_caracteres_1_número_y_1_signo"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColorHint="#546E7A" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:text="@string/repetir_contrase_a"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <EditText
        android:id="@+id/txtRepetirContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/repetir_contrasena"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColorHint="#546E7A" />

    <!--Advertencia de campos obligatorios -->
    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/campos_obligatorios"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <!--boton de crear cuenta -->
    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        tools:ignore="VisualLintButtonSize"
        android:layout_marginTop="25dp"/>

</LinearLayout>