<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <!-- aqui se cargan los datos recibidos para generar los items de la evaluacion con su estado y observ capturados-->

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/hab_adap"
        android:textAlignment="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvItem"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:text="@string/ítem"/>

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Estado"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvObservaciones"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/observaciones"/>

</LinearLayout>