<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioApp.Login">

    <!-- pantalla principal para entrar a la app: boton registro-->
    <Button
        android:id="@+id/btnRegistro"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/registrarme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

    <!-- Diseño de pantalla, textos para guiar al usuario de lo que se pide-->
    <TextView
        android:id="@+id/TxtHola"
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:text="@string/hola"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#2128F3"
        android:textSize="34sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.032"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/correoElectronico"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/correo_electronicoinicio"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="#546E7A"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <EditText
        android:id="@+id/contrasena"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHint="#546E7A"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoElectronico" />

    <!--boton entrar, sirve cuando estan los datos correctos -->
    <Button
        android:id="@+id/btnEntrar"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="199dp"
        android:layout_height="53dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasena" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/por_favor_rellene_los_campos_para_iniciar_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtHola" />

    <!-- logo de la app especial mas-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="211dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/logo_especial_mas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/especialsinfondo" />

</androidx.constraintlayout.widget.ConstraintLayout>